alignment issues solved

--- a/app/assets/stylesheets/custome.css
+++ b/app/assets/stylesheets/custome.css
@@ -25,6 +25,8 @@
 .chkbox_input_div .help-tip{display:inline-block; vertical-align: top;}
 .md-checkbox  .input_box_url label{padding: 0px;}
 .bgwhite{background:#fff;}
+.error_space{height:64px;}
+.error_space_h57{height:57px}
 /*=======================Nilam CSS End =================================*/
 /*form#new_edm.form-horizontal div.mdl-grid.mdl-shadow--1dp div.mdl-cell--12-col.mdl-cell--12-col-tablet.ml-color--shades-white.m-8{margin-bottom: 0px !important;}
 form#edit_edm_12 div.mdl-grid.mdl-shadow--1dp div.mdl-cell--12-col.mdl-cell--12-col-tablet.ml-color--shades-white.m-8{margin-bottom: 0px !important;}*/
